--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "url": "git+https://github.com/MaharshiChetan/react-search-app.git"
   },
   "dependencies": {
+    "@craco/craco": "^6.1.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.3",
     "axios": "^0.21.0",
     "dotenv": "^8.2.0",
     "react": "^17.0.1",
@@ -26,9 +28,9 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -50,6 +52,9 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.3.1"
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.36",
+    "prettier": "2.3.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.2"
   }
 }
